small fixes Video, grids, align

--- a/src/pages/contestPage/ui/components/descriptionSection/descriptionSection.scss
+++ b/src/pages/contestPage/ui/components/descriptionSection/descriptionSection.scss
@@ -57,14 +57,14 @@
 
             .example-list {
                 display: grid;
-                // flex-wrap: wrap;
-                grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+                grid-template-columns: repeat(auto-fill, minmax(135px, 1fr));
                 gap: 8px;
 
                 .example-media {
                     border-radius: 8px;
                     width: 100%;
-                    height: 100%;
+                    // height: 100%;
+                    aspect-ratio: 135/132;
                 }
             }
         }
