--- a/src/pages/contestPage/ui/components/worksListSection/worksListSection.scss
+++ b/src/pages/contestPage/ui/components/worksListSection/worksListSection.scss
@@ -66,7 +66,7 @@
     &__list {
         width: 100%;
         display: flex;
-        justify-content: center;
+        justify-content: start;
         flex-wrap: wrap;
         gap: 20px 32px;
 
