--- a/src/shared/ui/videoPlayer/videoPlayer.scss
+++ b/src/shared/ui/videoPlayer/videoPlayer.scss
@@ -28,4 +28,5 @@ video {
     width: 100%;
     height: 100%;
     // object-fit: cover;
+    border-radius: 16px;
 }
